Fixed CSS to prevent overlapping of box or configurator form

--- a/main.raw.css
+++ b/main.raw.css
@@ -90,9 +90,8 @@ button#reload {
 }
 
 #about {
-   position: absolute;
-   left: 550px;
-   width: 470px;
+   float: left;
+   width: 468px;
    margin-right: 10px;
 }
 
